--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --skeleton-background: #b8b8b8;
   --box-shadow: 0 0 0.25rem darkgrey;
   --border-radius: 0.25rem;
+  --header-z-index: 1;
+  --skip-link-z-index: 2;
 }
 
 body {
