--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,12 @@
 }
 
 :root {
-  --primary-color: #555;
+  --gray: #555;
+  --blue: hsl(193, 82%, 31%);
   --skeleton-background: #b8b8b8;
   --box-shadow: 0 0 0.25rem darkgrey;
   --border-radius: 0.25rem;
+  --gap: 1.5rem;
   --header-z-index: 1;
   --skip-link-z-index: 2;
 }
@@ -18,6 +20,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  gap: var(--gap);
 }
 
 a {
