--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --skeleton-background: #b8b8b8;
   --box-shadow: 0 0 0.25rem darkgrey;
   --border-radius: 0.25rem;
+  --header-icon-size: 2rem;
   --gap: 1.5rem;
   --header-z-index: 1;
   --skip-link-z-index: 2;
