add styles for cart page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,11 @@ li {
   list-style-type: none;
 }
 
+button {
+  border: none;
+  cursor: pointer;
+}
+
 select {
   outline: none;
   cursor: pointer;
