--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,10 @@ address {
   flex-direction: column;
   gap: 1rem;
 }
+
+.hidden {
+  position: absolute;
+  overflow: hidden;
+  width: 1px;
+  height: 1px;
+}
